--- a/milestone_1/asset/CSS/style.css
+++ b/milestone_1/asset/CSS/style.css
@@ -63,7 +63,7 @@ div.chat{
 
  /* SIDE BAR  */
 
-    .fixed-avatar, .contact-selected{
+    .fixed-avatar, .selected-contact{
         width: 100%;
         /* Altezza=header height  - position-top della schermata  */
         height: calc(100px - 15px);
@@ -71,14 +71,14 @@ div.chat{
     }
 
     /* SIDE BAR : Fixed AVATAR  */
-    .fixed-avatar{
+    .fixed-avatar, .selected-contact{
         padding: 0.5rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
     div.user{
-        width: 70%;
+        
         display: flex;
         align-items: center;
         margin-left: 5px;
@@ -93,10 +93,10 @@ div.chat{
         margin-right: 5px;
     }
     .icons {
-        width: 30%;
+        width: 120px;
         display: flex;
         justify-content: space-between;
-        font-size: 1.3rem;
+        font-size: 1.8rem;
         color: #B1B1B1;
     }
     /* SIDE BAR : Fixed AVATAR  */
@@ -139,15 +139,17 @@ div.chat{
     .c-search-bar{
       display: flex;
        background-color: #FAFAFA;
+       align-items: center;
        
     }
     .c-search-bar i {
         background-color: white;
         color: #B6B9BB;
         padding: 0.8rem 0.8rem 0.8rem 2rem;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
     .c-search-bar input{
+        height: 1.5rem;
         border: 0;
         font-size: 1rem;
         width: 100%; 
@@ -164,13 +166,13 @@ div.chat{
     }
     .contact{
         display: flex;
-       padding: 1.4rem 0 0 2rem;
+       padding: 12px 0 12px 2rem;
        margin-top: 2px;
        background-color: white;
     }
     .contact p{
         font-size: 1.35rem;
-        padding-left: 10px;
+        padding-left: 15px;
         font-weight:300;
     }
     .contact img{
@@ -182,8 +184,19 @@ div.chat{
 
 
 /* /SIDE BAR  */
+ 
+    /* SCHERMATA : SELECTED - CONTACT  */
 
-
+  
+    .selected-info{
+        margin-left: 5px;
+    }
+    .selected-contact .time{
+        color:#757575;
+        font-size: 0.9rem;
+        padding-top: 0.5rem;
+    }
+  
 
 
 
