--- a/milestone_1/asset/CSS/style.css
+++ b/milestone_1/asset/CSS/style.css
@@ -10,7 +10,7 @@
     flex-direction: column;
 }
 .altezza{
-    height: 550px;
+    height: 500px;
 }
 .w100{
     width: 100%;
@@ -29,7 +29,8 @@ body{
 header{
     width: 100%;
     height: 100px;
-    background-color:#009688;
+    /* background-color:#009688; */
+    background-image: linear-gradient(to bottom, #009688 0px, #009688 100px, #d3d3d3 100px, #d3d3d3 100%);
 }
 
 main{
@@ -242,17 +243,17 @@ div.user{
     font-size: 1rem;
     margin: 0 1px 0 5px;
     }
-.icons{
+.fixed-avatar .icons{
     width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
-.icons i{
+.fixed-avatar  .icons i{
     font-size: 13px;
 }
-.icons i:nth-of-type(2){
+.fixed-avatar .icons i:nth-of-type(2){
     margin:2px 0;
 }
 
