--- a/milestone_1/asset/CSS/style.css
+++ b/milestone_1/asset/CSS/style.css
@@ -224,10 +224,39 @@ div.chat{
         flex-basis: 80%;
     }
 
+.main-chat{
+    width: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    align-items: flex-start;
+}
+.main-chat .time{
+    font-size: 0.5rem;
+    text-align: right;
+    padding-top: 5px;
+    margin-left: 3rem;
+    color: #B8B9C0;
+}
+.inviati, .ricevuti{
+padding:1rem;
+border-radius: 20px;
+margin-top: 1rem;
+}
+
+.inviati{
+background-color: #d5f9ba;
+margin-left: auto;
+margin-right: 3rem;
+}
 
 
-
-
+.ricevuti{
+    background-color: white;
+    margin-left: 3rem;
+    
+}
 
 
 
