Milestone 2: added hover effect on contacts

--- a/milestone_2/asset/CSS/style.css
+++ b/milestone_2/asset/CSS/style.css
@@ -257,8 +257,11 @@ margin-right: 3rem;
     margin-left: 3rem;
     
 }
-
-
+/* HOVER SUI CONTATTI  */
+.contact:hover{
+    background-color: #E9EBEB;
+}
+/* /HOVER SUI CONTATTI  */
 
 
 
