--- a/milestone_4/asset/CSS/style.css
+++ b/milestone_4/asset/CSS/style.css
@@ -90,11 +90,14 @@ div.chat{
         margin-right: 5px;
     }
     .icons {
-        width: 120px;
         display: flex;
         justify-content: space-between;
-        font-size: 1.8rem;
+        font-size: 1.6rem;
         color: #B1B1B1;
+        margin-right: 1rem;
+    }
+    .icons i:nth-of-type(2){
+        margin:0 1rem;
     }
     /* SIDE BAR : Fixed AVATAR  */
 
@@ -268,7 +271,7 @@ margin-right: 3rem;
 
 
 
-
+/* 
 @media screen and (max-width:946px){
 div.user{
     width: 80%;
@@ -293,4 +296,4 @@ div.user{
 
 
     
-}
+} */
